--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="splash_text">精彩即将开启\n敬请期待</string>
     <string name="share_title">神奇动物世界</string>
     <string name="share_content">抢红包，听故事，跟国宝合影</string>
+    <string name="knowledge">小知识</string>
 
 
 </resources>
